# zbrush-utils-lib

./: .gitignore  CMakeLists.txt  README.md  build.bat  vscode.bat
src/: main.cpp  main.h  main.lib  switch.h
